Update and rename CV to CV.html

--- a/CV.html
+++ b/CV.html
@@ -29,7 +29,7 @@
         </ul>      
       </section>
       <section id="career history">
-        <h2>BTIG Limited></h2>
+        <h2>BTIG Limited</h2>
         <h2>Nov 2021 - Jan 2023</h3>
         <p>Cash Equity trader responsible for Utilities, Renewables, cross-coverage midcaps and all other sectors. Primary contact point for ADR/GDR trading/queries as well as fx hedging. Traded spreads and pairs.</p>
        </section>
