--- a/CV.html
+++ b/CV.html
@@ -29,12 +29,38 @@
         </ul>      
       </section>
       <section id="career history">
-        <h2>BTIG Limited</h2>
-        <h2>Nov 2021 - Jan 2023</h3>
-        <p>Cash Equity trader responsible for Utilities, Renewables, cross-coverage midcaps and all other sectors. Primary contact point for ADR/GDR trading/queries as well as fx hedging. Traded spreads and pairs.</p>
-       </section>
-       <section>
-        <h2>Morgan Stanley</h2>
-        <h2>
+        <article id="btig"
+          <h2>BTIG Limited</h2>
+          <h2>Nov 2021 - Jan 2023</h2>
+          <h2>Cash Equity Trading</h2>
+          <ul>
+            <li>Sector trading for Utilities, Renewables, REIT; cross-coverage of smallcaps, ECM</li>
+            <li>Reworked and systematically improved EOD & overnight ‘best situations’ reporting/stats</li>
+            <li>Introduced EOW and smallcap reporting with relevant market & proprietary stats</li>
+            <li>Introduced weekly earnings performance, ranked by factors and sectorised</li>
+            <li>Introduced a systematic, excel based function for recording/reporting multi-leg spreads</li>
+            <li>•	Reliable & consistent desk coverage throughout strikes/WFH situations. Excellent written and verbal communications in confirming and executing instructions</li>
+          </ul>
+        </article>
+        <article id="ms equity trading">
+          <h2>Morgan Stanley</h2>
+          <h2>March 2017 - Aprile 2021</h2>
+          <h2>Cash Equity Trading</h2>
+          <ul>
+            <li>Sector trading for Chemicals, Utilities, Business Services, Leisure, Transport, Emerging Markets. Positive risk unwinds alpha for these sectors with increasing market share</li>
+            <li>Pre-WFH coverage of risk arb/special situations. Traded the book with high turnover, agile risk strategy. Net positive p&l for years 2019+2020</li>
+            <li>Net positive p&l for risk arbitrage trading</li>
+            <li>New inventory strategies for ADR/GDR trading/inventory book resulting in large positive p&l for ADR/GDR book</li>
+            <li>Developed trading/booking mechanism for client starting DLC strategy</li>
+            <li>Created CIX & custom products for clients and internal desks to track spreads</li>
+            <li>Further cemented my position as the person to call for complex or difficult trades/booking methods. I received feedback from several high touch US clients that 	other counterparties simply didn’t know how, or want to, get some trades done</li>
+            <li>3-month coverage of corporate trading desk including the UK Govt Lloyds share sell-down. I leveraged sector knowledge to help a highly sensitive client build their voting stake in an existing holding without market impact</li>
+            <li>Introduced new morning call for BLT trading/research/sales team</li>
+            <li>Desk representative for development and implementation of new, integrated sales trading & trading system. Dramatic increase in functionality, productivity and efficiency</li>
+            <li>COO cover for trading items during maternity leave, further increasing contact with tech development teams</li>
+            <li>De facto compliance expert on the desk with continuous two-way discussions and consultations around client and house activity</li>
+            <li>Trained junior analysts to ensure consistency of knowledge and quality of performance</li>
+          </ul>
+        </article>
     </main>     
   </body>
