--- a/CV.html
+++ b/CV.html
@@ -39,7 +39,7 @@
             <li>Introduced EOW and smallcap reporting with relevant market & proprietary stats</li>
             <li>Introduced weekly earnings performance, ranked by factors and sectorised</li>
             <li>Introduced a systematic, excel based function for recording/reporting multi-leg spreads</li>
-            <li>•	Reliable & consistent desk coverage throughout strikes/WFH situations. Excellent written and verbal communications in confirming and executing instructions</li>
+            <li>Reliable & consistent desk coverage throughout strikes/WFH situations. Excellent written and verbal communications in confirming and executing instructions</li>
           </ul>
         </article>
         <article id="ms equity trading">
