--- a/index.html
+++ b/index.html
@@ -1,9 +1,66 @@
 <html>
- 
-<body>
-  <h1>Jake Herman</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
-</body>
- 
-</html>
+  <body>
+    <header>
+      <h1><a href="https://www.linkedin.com/in/jake-herman-80473820/">Jake Herman CV<a/></h1>
+      <h2>Rosevear, South View Road, Wadhurst, TN5 6TW</h2>
+      <h2>07590586031</h2>
+      <h2>jake.t.herman@gmail.com</h2>
+    </header>
+    <main>
+      <section id-"summary">
+        <article>
+          <h2>Equity Trader</h2>
+          <p>An experienced and highly knowledgeable equity trader with a diverse set of professional skills and a wealth of industry knowledge. A natural problem solver and with a pragmatic ‘can do’ attitude. Is the ‘go-to person’ in London equities when a question needs an answer due to extensive experience and attitude.</p>
+        </article>
+      </section>
+      <section id="key skills">
+        <h2>Key Skills</h2>
+        <ul>
+          <li>Problem solver/trading expert in Cash Equity with solid grounding in derviatives</li>
+          <li>Authorised trader at all developed & emerging European venues</li>
+          <li>In depth knowledge MENA stocks exchanges</li>
+          <li>Expert knowledge ADR/GDR/DLC</li>
+          <li>Expert knowledge corporate actions</li>
+          <li>FCA CF certified for Equity and Equity Derivatives (formerly CF30)</li>
+          <li>Bloomberg Professional</li>
+          <li>Fidessa Trading</li>
+          <li>Colleague training & Development </li>
+          <li>Desk Operations</li>
+        </ul>      
+      </section>
+      <section id="career history">
+        <article id="btig"
+          <h2>BTIG Limited</h2>
+          <h2>Nov 2021 - Jan 2023</h2>
+          <h2>Cash Equity Trading</h2>
+          <ul>
+            <li>Sector trading for Utilities, Renewables, REIT; cross-coverage of smallcaps, ECM</li>
+            <li>Reworked and systematically improved EOD & overnight ‘best situations’ reporting/stats</li>
+            <li>Introduced EOW and smallcap reporting with relevant market & proprietary stats</li>
+            <li>Introduced weekly earnings performance, ranked by factors and sectorised</li>
+            <li>Introduced a systematic, excel based function for recording/reporting multi-leg spreads</li>
+            <li>Reliable & consistent desk coverage throughout strikes/WFH situations. Excellent written and verbal communications in confirming and executing instructions</li>
+          </ul>
+        </article>
+        <article id="ms equity trading">
+          <h2>Morgan Stanley</h2>
+          <h2>March 2017 - Aprile 2021</h2>
+          <h2>Cash Equity Trading</h2>
+          <ul>
+            <li>Sector trading for Chemicals, Utilities, Business Services, Leisure, Transport, Emerging Markets. Positive risk unwinds alpha for these sectors with increasing market share</li>
+            <li>Pre-WFH coverage of risk arb/special situations. Traded the book with high turnover, agile risk strategy. Net positive p&l for years 2019+2020</li>
+            <li>Net positive p&l for risk arbitrage trading</li>
+            <li>New inventory strategies for ADR/GDR trading/inventory book resulting in large positive p&l for ADR/GDR book</li>
+            <li>Developed trading/booking mechanism for client starting DLC strategy</li>
+            <li>Created CIX & custom products for clients and internal desks to track spreads</li>
+            <li>Further cemented my position as the person to call for complex or difficult trades/booking methods. I received feedback from several high touch US clients that 	other counterparties simply didn’t know how, or want to, get some trades done</li>
+            <li>3-month coverage of corporate trading desk including the UK Govt Lloyds share sell-down. I leveraged sector knowledge to help a highly sensitive client build their voting stake in an existing holding without market impact</li>
+            <li>Introduced new morning call for BLT trading/research/sales team</li>
+            <li>Desk representative for development and implementation of new, integrated sales trading & trading system. Dramatic increase in functionality, productivity and efficiency</li>
+            <li>COO cover for trading items during maternity leave, further increasing contact with tech development teams</li>
+            <li>De facto compliance expert on the desk with continuous two-way discussions and consultations around client and house activity</li>
+            <li>Trained junior analysts to ensure consistency of knowledge and quality of performance</li>
+          </ul>
+        </article>
+    </main>     
+  </body>
