--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+  <head>Jake Herman CV</head>
   <body>
     <header>
       <h1><a href="https://www.linkedin.com/in/jake-herman-80473820/">Jake Herman CV<a/></h1>
